pkg/scheduler: Support pluggable capacity

--- a/config.json
+++ b/config.json
@@ -20,5 +20,6 @@
 	    "nonfree": "http://alpha.de.repo.voidlinux.org/current/nonfree/armv7l-repodata",
 	    "local":   "file://void-packages/hostdir/binpkgs/armv7l-repodata"
         }
-    }
+    },
+    "CapacityProvider": "local"
 }
