pkg/scheduler/nomad: Support scheduling builds with nomad

--- a/config.json
+++ b/config.json
@@ -3,10 +3,6 @@
         {
             "Host": "x86_64",
             "Target": "x86_64"
-        },
-        {
-            "Host": "x86_64",
-            "Target": "armv7l"
         }
     ],
     "RepoDataURLs": {
@@ -14,12 +10,10 @@
             "main":    "http://alpha.de.repo.voidlinux.org/current/x86_64-repodata",
 	    "nonfree": "http://alpha.de.repo.voidlinux.org/current/nonfree/x86_64-repodata",
 	    "local":   "file://void-packages/hostdir/binpkgs/x86_64-repodata"
-        },
-        "x86_64:armv7l": {
-            "main":    "http://alpha.de.repo.voidlinux.org/current/armv7l-repodata",
-	    "nonfree": "http://alpha.de.repo.voidlinux.org/current/nonfree/armv7l-repodata",
-	    "local":   "file://void-packages/hostdir/binpkgs/armv7l-repodata"
         }
     },
-    "CapacityProvider": "local"
+    "CapacityProvider": "nomad",
+    "BuildSlots": {
+        "x86_64:x86_64": 5
+    }
 }
