pkg: Remove references to alpha.de.repo

--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
     ],
     "RepoDataURLs": {
         "x86_64:x86_64": {
-            "main":    "http://alpha.de.repo.voidlinux.org/current/x86_64-repodata",
-	    "nonfree": "http://alpha.de.repo.voidlinux.org/current/nonfree/x86_64-repodata",
+            "main":    "http://repo-fastly.voidlinux.org/current/x86_64-repodata",
+	    "nonfree": "http://repo-fastly.voidlinux.org/current/nonfree/x86_64-repodata",
 	    "local":   "file://void-packages/hostdir/binpkgs/x86_64-repodata"
         }
     },
